Refactor: Deep-dive cleanup of hardcoded ports.
- Updated Syncthing system service listen address to use registry.
- Verified Samba and other host-mode services.
- Confirmed all 4-5 digit numbers in variables are either UID/GIDs or correctly registered ports.
- Verified all network-related Ansible modules (wait_for, get_url) for port consistency.

--- a/roles/syncthing/tasks/main.yml
+++ b/roles/syncthing/tasks/main.yml
@@ -67,6 +67,6 @@
   ansible.builtin.xml:
     path: "/home/{{ syncthing_user }}/.local/state/syncthing/config.xml"
     xpath: /configuration/gui/address
-    value: "0.0.0.0:8384"
+    value: "0.0.0.0:{{ ports[inventory_hostname | replace('-', '_')].syncthing_gui | default(8384) }}"
   become: true
   notify: restart syncthing
