Refactor: Enforce host-level port registry and remove silent fallbacks.
- Removed container-internal ports from ports.yml to reduce noise.
- Removed | default() filters from port lookups to enforce registry as source of truth.
- Restored explicit internal ports for Wyoming OpenAI role.
- Fixed potential split-brain configuration risk.

--- a/roles/dockerproxy/tasks/main.yml
+++ b/roles/dockerproxy/tasks/main.yml
@@ -29,7 +29,7 @@
             VOLUMES: "1"
             DISABLE_IPV6: "0"
           ports:
-            - "{{ ports[inventory_hostname | replace('-', '_')].docker_proxy | default(2375) }}:2375"
+            - "{{ ports[inventory_hostname | replace('-', '_')].docker_proxy }}:2375"
           networks:
             - dockerproxy
           volumes:
