--- a/group_vars/all/llms.yml
+++ b/group_vars/all/llms.yml
@@ -465,7 +465,7 @@ llamaswap_models:
       -v {{ llamaswap_config_path }}/cache:/root/.cache
       --ipc=host
       -e HF_HOME=/root/.cache/huggingface
-      vllm/vllm-openai:latest
+      vllm/vllm-openai:v0.13.0
       openai/gpt-oss-20b
       --served-model-name ${MODEL_ID}
       --port ${PORT}
@@ -485,6 +485,32 @@ llamaswap_models:
       low:
         extra_body:
           reasoning_effort: "low"
+
+  - alias: GLM-4.7-Flash-AWQ-vLLM
+    cmd: >-
+      docker run --rm --init --name ${MODEL_ID}
+      --runtime nvidia --gpus '"device={{ampere_gpu_uuid}}"'
+      --network container:llama-swap
+      -v {{ llamaswap_config_path }}/cache:/root/.cache
+      --ipc=host
+      -e HF_HOME=/root/.cache/huggingface
+      vllm/vllm-openai:nightly
+      cyankiwi/GLM-4.7-Flash-AWQ-4bit
+      --served-model-name ${MODEL_ID}
+      --port ${PORT}
+      --max-num-seqs 1
+      --max-num-batched-tokens 2048
+      --stream-interval 1
+      --speculative-config.method mtp
+      --speculative-config.num_speculative_tokens 1
+      --tool-call-parser glm47
+      --reasoning-parser glm45
+      --enable-auto-tool-choice
+    cmdStop: docker stop ${MODEL_ID}
+    supports_function_calling: true
+    supports_vision: false
+    supports_reasoning: true
+    group: "3090"
 
 llamaswap_model_groups:
   forever:
