--- a/group_vars/all/llms.yml
+++ b/group_vars/all/llms.yml
@@ -385,7 +385,8 @@ llamaswap_models:
       --cache-type-v q8_0
       --fit on
       --fit-target 1024
-      -np 2
+      -np 4
+      -sps 0.5
       --seed 3407
       --temp 0.7
       --top-p 1.0
@@ -411,6 +412,8 @@ llamaswap_models:
       -kvu
       --cache-type-k q8_0
       --cache-type-v q8_0
+      -np 4
+      -sps 0.5
       --seed 3407
       --temp 0.7
       --top-p 1.0
