--- a/group_vars/all/llms.yml
+++ b/group_vars/all/llms.yml
@@ -431,6 +431,31 @@ llamaswap_models:
         chat_template_kwargs:
           enable_thinking: false
 
+  - alias: Qwen3-Coder-Next-Q3
+    cmd: >-
+      /app/llama-server
+      -hf unsloth/Qwen3-Coder-Next-GGUF:Q3_K_XL
+      --port ${PORT}
+      --n-predict 16384
+      --flash-attn auto
+      --n-gpu-layers 99
+      --ubatch-size 512
+      --cache-type-k q4_1
+      --cache-type-v q4_1
+      --temp 1.0
+      --top-p 0.95
+      --min-p 0.01
+      --top-k 40
+      --seed 3407
+      --jinja
+      --fit on
+      --fit-target 768,5120
+      --swa-checkpoints 0
+    supports_function_calling: true
+    supports_vision: false
+    supports_reasoning: false
+    group: "big_boys"
+
   - alias: GLM-4.7-Flash-AWQ
     cmd: >-
       docker run --rm --init --name ${MODEL_ID}
