--- a/roles/wyoming_openai/defaults/main.yml
+++ b/roles/wyoming_openai/defaults/main.yml
@@ -2,6 +2,9 @@
 wyoming_openai_image: ghcr.io/roryeckel/wyoming_openai:latest
 speaches_image: ghcr.io/speaches-ai/speaches:latest-cuda
 
+# Toggle for Chatterbox services
+wyoming_openai_enable_chatterbox: false
+
 wyoming_openai_container_name: wyoming-openai
 wyoming_openai_chatterbox_container_name: wyoming-openai-chatterbox
 speaches_container_name: speaches
